add route search on library
